@@ -1,3 +1,8 @@
+2006-01-14  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/25663
+	* g++.dg/template/ctor6.C: New test.
+
 2006-01-11  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR testsuite/25728
